; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_video.c___setInterruptRegs.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_video.c___setInterruptRegs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct._timing = type { i32, i32 }

@regs = common dso_local global i32* null, align 8
@changed = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct._timing*)* @__setInterruptRegs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__setInterruptRegs(%struct._timing* %0) #0 {
  %2 = alloca %struct._timing*, align 8
  %3 = alloca i32, align 4
  store %struct._timing* %0, %struct._timing** %2, align 8
  store i32 0, i32* %3, align 4
  %4 = load %struct._timing*, %struct._timing** %2, align 8
  %5 = getelementptr inbounds %struct._timing, %struct._timing* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = srem i32 %6, 2
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %13

9:                                                ; preds = %1
  %10 = load %struct._timing*, %struct._timing** %2, align 8
  %11 = getelementptr inbounds %struct._timing, %struct._timing* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  store i32 %12, i32* %3, align 4
  br label %13

13:                                               ; preds = %9, %1
  %14 = load %struct._timing*, %struct._timing** %2, align 8
  %15 = getelementptr inbounds %struct._timing, %struct._timing* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = sdiv i32 %16, 2
  %18 = add nsw i32 %17, 1
  %19 = or i32 4096, %18
  %20 = load i32*, i32** @regs, align 8
  %21 = getelementptr inbounds i32, i32* %20, i64 24
  store i32 %19, i32* %21, align 4
  %22 = load i32, i32* %3, align 4
  %23 = add nsw i32 %22, 1
  %24 = load i32*, i32** @regs, align 8
  %25 = getelementptr inbounds i32, i32* %24, i64 25
  store i32 %23, i32* %25, align 4
  %26 = call i32 @VI_REGCHANGE(i32 24)
  %27 = load i32, i32* @changed, align 4
  %28 = or i32 %27, %26
  store i32 %28, i32* @changed, align 4
  %29 = call i32 @VI_REGCHANGE(i32 25)
  %30 = load i32, i32* @changed, align 4
  %31 = or i32 %30, %29
  store i32 %31, i32* @changed, align 4
  ret void
}

declare dso_local i32 @VI_REGCHANGE(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
